# GPR

./: .gitignore  README.md
pcdet/: version.py
pcdet/datasets/: __init__.py  dataset.py
pcdet/datasets/augmentor/: database_sampler_waymo_gt.py
pcdet/datasets/kitti/: kitti_dataset.py  kitti_dataset_pre.py  kitti_dataset_src.py
pcdet/datasets/processor/: data_processor.py
pcdet/datasets/waymo/: waymo_dataset.py
pcdet/models/backbones_3d/: IASSD_backbone_src.py
pcdet/ops/: __init__.py
pcdet/ops/patchworkpp/: CMakeLists.txt
pcdet/ops/patchworkpp/patchworkpp/include/: patchworkpp.h  patchworkpp_src.h
pcdet/ops/patchworkpp/patchworkpp/src/: patchworkpp.cpp  patchworkpp_remove_vertical.cpp
pcdet/ops/patchworkpp/python_wrapper/: pybinding.cpp
pcdet/ops/pccluster/: CMakeLists.txt
pcdet/ops/pccluster/config/: cmake_config.h  cmake_config.h.in
pcdet/ops/pccluster/python_wrapper/: CMakeLists.txt  pybinding.cpp
pcdet/ops/pccluster/src/: CMakeLists.txt
pcdet/ops/pccluster/src/clusterers/: abstract_clusterer.h  image_based_clusterer.h
pcdet/ops/pccluster/src/clusteringprocessor/: CMakeLists.txt  clusteringprocessor.cpp  clusteringprocessor.h
pcdet/ops/pccluster/src/communication/: identifiable.h
pcdet/ops/pccluster/src/ground_removal/: depth_ground_remover.cpp  depth_ground_remover.h
pcdet/ops/pccluster/src/image_labelers/: abstract_image_labeler.h  linear_image_labeler.h
pcdet/ops/pccluster/src/projections/: cloud_projection.h  projection_params.cpp  projection_params.h  spherical_projection.cpp
pcdet/ops/pccluster/src/qt/drawables/: object_painter.cpp  object_painter.h
pcdet/ops/pccluster/src/ros_bridge/: cloud_odom_ros_subscriber.cpp
pcdet/ops/pccluster/src/utils/: CMakeLists.txt  cloud.h
pcdet/ops/pointnet2/pointnet2_batch/: pointnet2_modules_voxel.py  pointnet2_utils.py
pcdet/utils/: box_coder_utils.py
tools/: test.py  train.py
tools/cfgs/dataset_configs/: kitti_dataset.yaml  waymo_dataset.yaml
tools/cfgs/kitti_models/: GPR.yaml  pointrcnn.yaml  pv_rcnn_plusplus_resnet.yaml
tools/cfgs/waymo_models/: GPR.yaml  IA-SSD.yaml  centerpoint_dyn_pillar_1x_nog.yaml  pointpillar_1x_sampled.yaml
tools/eval_utils/: eval_utils.py
tools/train_utils/: train_utils.py
